force-app/main/default/objects/MgmtMaster__c/MgmtMaster__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_ExchangeRateOnlineHelp</customHelpPage>
    <description>為替や管理基準を管理するオブジェクト
Standard Exchange Rate</description>
    <label>為替</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>EXCHANGE RATE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>