force-app/main/default/objects/MgmtMaster__c/fields/FxEndTime__c.field-meta.xml
<CustomField>
    <fullName>FxEndTime__c</fullName>
    <label>END TIME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>T24HoursPer30Mins</valueSetName>
    </valueSet>
</CustomField>