force-app/main/default/objects/MgmtMaster__c/fields/FXStartTime__c.field-meta.xml
<CustomField>
    <fullName>FXStartTime__c</fullName>
    <label>START TIME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>T24HoursPer30Mins</valueSetName>
    </valueSet>
</CustomField>