force-app/main/default/objects/MgmtMaster__c/fields/Mgmt_Exrate_BuyingfromDomstic3rdvendor__c.field-meta.xml
<CustomField>
    <fullName>Mgmt_Exrate_BuyingfromDomstic3rdvendor__c</fullName>
    <label>BUYING EX-RATE FROM DOMESTIC VENDOR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>