force-app/main/default/objects/MgmtMaster__c/fields/Mgmt_Exrate_CCtoDomesticCustomer__c.field-meta.xml
<CustomField>
    <fullName>Mgmt_Exrate_CCtoDomesticCustomer__c</fullName>
    <label>SELLING EX-RATE FOR CC CUSTOMER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>