force-app/main/default/objects/MgmtMaster__c/fields/Mgmt_Exrate_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Mgmt_Exrate_End_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>