force-app/main/default/objects/MgmtMaster__c/fields/SellingFxRateTRS__c.field-meta.xml
<CustomField>
    <fullName>SellingFxRateTRS__c</fullName>
    <label>SELLING FXRATE FOR TRS CUSTOMER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>