force-app/main/default/objects/MgmtMaster__c/validationRules/Must_Specify_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Specify_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( Mgmt_Exrate_fromto__c ))</errorConditionFormula>
    <errorDisplayField>Mgmt_Exrate_fromto__c</errorDisplayField>
    <errorMessage>Please select the currency to convert to.</errorMessage>
</ValidationRule>