force-app/main/default/objects/MgmtMaster__c/validationRules/The_End_Date_must_be_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>The_End_Date_must_be_after_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Mgmt_Exrate_End_Date__c &lt;  Mgmt_Exrate_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Mgmt_Exrate_End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after Start Date</errorMessage>
</ValidationRule>