force-app/main/default/objects/MgmtMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FromCurrency__c</columns>
    <columns>ToCurrency__c</columns>
    <columns>Mgmt_Exrate_Start_Date__c</columns>
    <columns>Mgmt_Exrate_End_Date__c</columns>
    <columns>Mgmt_Exrate_FowardingtoDomesticCustomer__c</columns>
    <columns>Mgmt_Exrate_BuyingfromDomstic3rdvendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>