force-app/main/default/objects/MgmtMaster__c/listViews/Ex_Rate_Account_Team_MgmtMaster.listView-meta.xml
<ListView>
    <fullName>Ex_Rate_Account_Team_MgmtMaster</fullName>
    <filterScope>Queue</filterScope>
    <label>Ex Rate-Account Team</label>
    <queue>Ex_Rate_Account_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>